* Refactor full house case and add more test cases * Reorganize public and private methods * Rename methods